# KNN-Implementation

./: CMakeLists.txt  CheckFuncs.cpp  CheckFuncs.h  ClassifyCommand.cpp  ClassifyCommand.h  Cli.cpp  Cli.h  Client.cpp  Client.h  ClientMain.cpp  ClientSocket.cpp  ClientSocket.h  Command.cpp  Command.h  Command2.cpp  Command2.h  Data.cpp  Data.h  DefaultIO.cpp  DefaultIO.h  DisplayCommand.cpp  DisplayCommand.h  DistanceType.cpp  DistanceType.h  DownloadCommand.cpp  DownloadCommand.h  Makefile  README.md  Server.cpp  Server.h  ServerMain.cpp  ServerSocket.cpp  ServerSocket.h  SessionSocket.cpp  SessionSocket.h  SettingCommand.cpp  SettingCommand.h  SocketIO.cpp  SocketIO.h  StandartIO.cpp  (+20 more)
